--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.9",
     "router": "^1.3.8"
   }
 }
